--- a/style.css
+++ b/style.css
@@ -8,29 +8,79 @@ html {
   font-size: 62.5%;
 }
 
-body{
+body {
   width: 144rem;
-  background-color:  hsl(233, 47%, 7%);
+  background-color: hsl(233, 47%, 7%);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.main{
-  background-color:  hsl(244, 38%, 16%);
+.main {
+  background-color: hsl(244, 38%, 16%);
   display: flex;
   border-radius: 10px 0 0 10px;
-}
-.text-box{
-  width:50rem ;
-  
+  /* margin: 0 auto; */
 }
 
-.text-box{
-  padding: 4rem 0  0 5rem;
+.text-box {
+  width: 50rem;
+  padding: 5rem 0 0 6rem;
+
 }
 
-.head-image{
+
+.title {
+  font-family: 'inter';
+  font-weight: 700;
+  padding-right: 6rem;
+  color: #fff;
+  font-size: 3.3rem;
+}
+
+.highlight {
+  color: hsl(277, 64%, 61%);
+}
+
+.info {
+  color: hsla(0, 0%, 100%, 0.75);
+  font-weight: 400;
+  font-family: 'inter';
+  margin-top: 3.7rem;
+  line-height: 1.6;
+  padding-right: 8rem;
+  font-size: 1.4rem;
+}
+
+.numbers-box {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  width: 33rem;
+  margin-top: 7.5rem;
+  /* background-color: antiquewhite; */
+}
+
+.bold {
+  line-height: 3.7rem;
+  font-size: 2.3rem;
+  font-weight: 700;
+  font-family: 'Inter';
+}
+
+.subtitle {
+  font-family: 'Lexend Deca';
+  font-size: 1.2rem;
+  color: hsla(0, 0%, 100%, 0.6);
+text-transform: uppercase;
+/* padding-top: 3rem; */
+}
+
+
+.head-image {
   border-radius: 0 10px 10px 0;
-  width:50rem ;
+  width: 50rem;
+  background-image: linear-gradient(10deg,hsl(277, 64%, 61%),hsl(277, 64%, 61%) ) url(./images/image-header-desktop.jpg) ;
+  background-size: cover;
+  background-position: center;
 }
