--- a/style.css
+++ b/style.css
@@ -20,12 +20,18 @@ body {
   background-color: hsl(244, 38%, 16%);
   display: flex;
   border-radius: 10px 0 0 10px;
-  /* margin: 0 auto; */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
+
+/*********************TEXT SECTION *********************/
+
 .text-box {
-  width: 50rem;
-  padding: 5rem 0 0 6rem;
+  width: 54rem;
+  padding: 6rem 0 0 7rem;
 
 }
 
@@ -38,18 +44,18 @@ body {
   font-size: 3.3rem;
 }
 
-.highlight {
+.highlight-word {
   color: hsl(277, 64%, 61%);
 }
 
-.info {
+.description {
   color: hsla(0, 0%, 100%, 0.75);
   font-weight: 400;
   font-family: 'inter';
-  margin-top: 3.7rem;
+  margin-top: 4rem;
   line-height: 1.6;
-  padding-right: 8rem;
-  font-size: 1.4rem;
+  padding-right: 12rem;
+  font-size: 1.5rem;
 }
 
 .numbers-box {
@@ -58,10 +64,10 @@ body {
   color: #fff;
   width: 33rem;
   margin-top: 7.5rem;
-  /* background-color: antiquewhite; */
+  margin-bottom: 6.5rem;
 }
 
-.bold {
+.bold-numbers {
   line-height: 3.7rem;
   font-size: 2.3rem;
   font-weight: 700;
@@ -72,15 +78,13 @@ body {
   font-family: 'Lexend Deca';
   font-size: 1.2rem;
   color: hsla(0, 0%, 100%, 0.6);
-text-transform: uppercase;
-/* padding-top: 3rem; */
+  text-transform: uppercase;
 }
 
-
+/*********************IMAGE HERO *********************/
 .head-image {
   border-radius: 0 10px 10px 0;
-  width: 50rem;
-  background-image: linear-gradient(10deg,hsl(277, 64%, 61%),hsl(277, 64%, 61%) ) url(./images/image-header-desktop.jpg) ;
+  width: 54rem;
+  background-image: linear-gradient(1deg, hsla(278, 80%, 29%, 0.6), hsla(278, 80%, 29%, 0.6)), url(./images/image-header-desktop.jpg);
   background-size: cover;
-  background-position: center;
 }
